<resources>
    <string name="app_name">JiKiGo</string>
    <!--    툴바 타이틀	-->
    <string name="toolbar_title_payment">결제</string>
    <string name="toolbar_title_sign_up">회원가입</string>

    <!--    회원가입	-->
    <string name="sign_up_label">환영합니다!\n지키GO에 가입하시려면 약관에 동의해 주세요</string>
    <string name="sign_up_all">약관 전체 동의하기</string>
    <string name="sign_up_age">만 14세 이상입니다. (필수)</string>
    <string name="sign_up_service">지키GO 이용 약관 (필수)</string>
    <string name="sign_up_personal_information_label">정보주체의 개인정보 및 권리 보호를 위해「개인정보 보호법」및 관계 법령이 정한 바를 준수하여 안전하게 관리하고 있습니다.\n자세한 사항은 개인정보처리방침에서 확인할 수 있습니다.</string>
    <string name="sign_up_confirm">동의하고 본인인증하기</string>
    <string name="sign_up_account_info">계정정보</string>
    <string name="sign_up_error_name">* 한글입력, 최소2자, 최대 8자\n* 공백 입력 불가</string>
    <string name="sign_up_error_mobile">* 휴대전화 번호 11자리를 입력. (하이픈 \" - \"는 제외)\n* 공백 입력 불가</string>
    <string name="sign_up_error_auth_number">* 숫자 6자리\n* 공백 입력 불가</string>
    <string name="sign_up_error_id">* 소문자 + 숫자, 조합만 허용, 최소 8자, 최대 16자\n* 공백 입력 불가</string>
    <string name="sign_up_error_pw">* 소문자 + 대문자 + 특수문자(!@#$) + 숫자 조합만 허용\n 최소14자리, 최대 20자리, 대문자가 최소 1개 이상 포함\n* 공백 입력 불가</string>
    <string name="sign_up_error_pw_check">* 비밀번호가 일치하지 않습니다.</string>
    <string name="sign_up_error_nickname">* 최소2자, 최대10자 입력가능</string>

    <!--    계정 찾기	-->
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_star">새 비밀번호 *</string>
    <string name="new_password_check">새 비밀번호 확인</string>
    <string name="new_password_check_star">새 비밀번호 확인 *</string>
    <string name="new_password_setting">새 비밀번호 설정</string>


    <!--    공통  	-->
    <string name="common_personal_information">개인정보</string>
    <string name="common_auth_request">인증요청</string>
    <string name="common_auth_confirm">인증확인</string>
    <string name="common_duplication_confirm">중복확인</string>
    <string name="common_name">이름</string>
    <string name="common_name_star">이름 *</string>
    <string name="common_mobile">휴대전화</string>
    <string name="common_mobile_star">휴대전화 *</string>
    <string name="common_mobile_no_hyphen">휴대전화 (\" - \" 없이)</string>
    <string name="common_auth_number">인증번호</string>
    <string name="common_auth_number_star">인증번호 *</string>
    <string name="common_id">아이디</string>
    <string name="common_id_star">아이디 *</string>
    <string name="common_nickname">닉네임</string>
    <string name="common_nickname_star">닉네임 *</string>
    <string name="common_pw">비밀번호</string>
    <string name="common_pw_star">비밀번호 *</string>
    <string name="common_pw_check">비밀번호 확인</string>
    <string name="common_pw_check_star">비밀번호 확인 *</string>
    <string name="common_auth_number_check">인증번호를 확인해주세요.</string>
    <string name="common_auth_number_check_success">인증번호가 일치합니다.</string>
    <string name="common_auth_number_check_failure">인증번호가 일치하지않습니다.</string>
    <string name="common_point">포인트</string>


    <!--오늘의 소식 환경 탭 레이아웃 아이템-->
    <string name="news_environment_all">전체</string>
    <string name="news_environment_air">대기</string>
    <string name="news_environment_water">물</string>
    <string name="news_environment_ecosystem">환경</string>
    <string name="news_environment_policy">정책</string>
    <string name="common_home">홈</string>
    <string name="common_reward">리워드</string>
    <string name="common_travel">여행</string>
    <string name="common_icon_environment">🌱</string>

    <!-- 마이 페이지 -->
    <string name="common_today">오늘</string>
    <string name="common_logout">로그아웃</string>
    <string name="my_page_point_history">포인트 내역</string>
    <string name="my_page_point_history_month">이번 달 내역</string>
    <string name="my_page_change_bank">등록 계좌 수정</string>
    <string name="my_page_coupon_box">쿠폰함</string>
    <string name="my_page_customer_service">고객센터</string>
    <string name="my_page_customer_service_description">월 - 금 9:00 ~ 18:00 (토.일 공휴일 휴무)</string>
    <string name="my_page_customer_service_phone">1588 – 1234</string>
    <string name="my_page_delete_account">회원탈퇴</string>

    <!-- 쿠폰 상세페이지 -->
    <string name="coupon_detail_save_coupon">쿠폰 저장하기</string>

    <!-- 쿠폰함 -->
    <string name="coupon_box_possession_coupon">보유 쿠폰</string>
    <string name="coupon_box_used_coupon">사용완료 쿠폰</string>
    <string name="coupon_box_description">아래의 교환처에서 바코드를 제시 후\n상품으로 교환할 수 있습니다</string>

    <!-- 프로필 수정 -->
    <string name="profile_edit_description">최소 2자에서 최대 10자까지 가능합니다</string>


    <!-- 리워드 -->
    <string name="reward_attend">출석하기</string>
    <string name="reward_point_history">적립 내역 보기</string>
    <string name="reward_walk_rank">걷기 랭킹</string>
    <string name="reward_walk_rank_check">이번 주 랭킹 확인하기</string>
    <string name="reward_tumblr_confirm">텀블러 사용 인증하러 가기</string>
    <string name="reward_transit_confirm">대중교통 이용 인증하러 가기</string>
    <string name="reward_electric_vehicle_confirm">전기 이동수단 이용 인증하러 가기</string>

    <!-- 출석하기 -->
    <string name="attend_bottom_sheet_title">출석체크 리워드가 적립되었어요.</string>
    <string name="attend_bottom_sheet_subtitle">내일도 잊지 말고 출석체크하세요!</string>
    <string name="attend_bottom_sheet_done">확인</string>

    <!-- 전기 이동수단 인증 -->
    <string name="electric_vehicle_confirm_title">전기 이동수단 이용을 인증해보세요!</string>
    <string name="electric_vehicle_confirm_description">우리가 1년 동안 전기 자전거나 킥보드를 이용한다면 \n자동차에서 발생하는 미세먼지와 유해한 화학물질 대신, 공기질을 개선하는 데 도움을 주는 효과가 있어요!</string>
    <string name="electric_vehicle_confirm_btn_description">만약 계좌 등록을 안 했다면?\n계좌 등록 페이지로 넘어갑니다!</string>
    <string name="electric_vehicle_confirm_btn_title">이용 내역 인증하기</string>

    <!-- 텀블러 인증 -->
    <string name="tumblr_confirm_title">텀블러 사용을 인증해보세요!</string>
    <string name="tumblr_confirm_description">우리가 1년 동안 1회용 플라스틱컵을 사용하지않는다면, 연간 19kg의 이산화탄소를 줄일 수 있으며,이는 25년생 중부지방소나무 두 그루를 심는 효과가 있어요!</string>

    <!-- 대중교통 인증 -->
    <string name="transit_confirm_title">대중교통 이용을 인증해보세요!</string>
    <string name="transit_confirm_description">우리가 1년 동안 대중교통을 이용한다면, 온실가스 배출량을 20%이상 줄일 수 있으며 특히, 전기버스나 철도와 같은 친환경적인 대중교통 수단을 채택하면 배충량 감소가 더욱 커질 수 있어요!</string>
    <string name="transit_confirm_btn_description">만약 계좌 등록을 안 했다면?\n계좌 등록 페이지로 넘어갑니다!</string>
    <string name="transit_confirm_btn_title">이용 내역 인증하기</string>

    <!-- QR -->
    <string name="payment_qr_refresh">QR 발급</string>
    <string name="payment_qr_use">사용처</string>
    <string name="payment_qr_user_point">보유잔액</string>
    <!-- DeleteID -->
    <string name="delete_id_terms">1. 회원은 언제든지 서비스 내 설정 페이지 또는 고객센터를 통해 회원 탈퇴(이용계약 해지)를 신청할 수 있으며, 회사는 관련 법령이 정하는 바에 따라 이를 즉시 처리합니다. \n2. 회원 탈퇴가 완료되면 해당 계정과 관련된 모든 데이터는 즉시 또는 일정 기간 후 삭제됩니다.단, 관계 법령에 따라 보관이 필요한 정보는 해당 법령에서 정한 기간 동안 보관됩니다. \n3. 회원 탈퇴 시, 보유 중인 포인트, 쿠폰, 서비스 이용 권한 등은 자동 소멸되며 복구가 불가능합니다. \n4. 회원이 탈퇴 후 재가입하는 경우, 기존 계정의 데이터는 복원되지 않습니다. \n5. 다음 각 호의 경우, 회사는 회원의 요청에도 불구하고 탈퇴 처리를 제한할 수 있습니다. \n - 법률에 따라 보관이 요구되는 거래 및 서비스 이용 기록이 존재하는 경우 \n - 미해결된 민원 또는 분쟁이 존재하는 경우 \n - 기타 회사가 합리적으로 필요하다고 판단하는 경우 \n6. 회원이 서비스 약관 또는 운영정책을 위반하여 강제 탈퇴된 경우, 회사는 일정 기간 해당 회원의 재가입을 제한할 수 있습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>