<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.login.FindIdFragment">

	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/tv_find_pw_name_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="50dp"
				android:text="@string/common_name_star"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/et_find_new_name"
				android:layout_width="0dp"
				android:layout_height="54dp"
				android:layout_marginHorizontal="40dp"
				android:layout_marginTop="5dp"
				app:endIconMode="clear_text"
				app:hintEnabled="false"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_find_pw_name_label">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/common_name"
					android:inputType="text"
					android:maxLength="8"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/tv_error_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up_error_name"
				android:textColor="@color/negative"
				android:textSize="12sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@id/et_find_new_name"
				app:layout_constraintTop_toBottomOf="@id/et_find_new_name" />

			<TextView
				android:id="@+id/tv_find_pw_id_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="20dp"
				android:text="@string/common_id_star"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_error_name" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/et_find_pw_id"
				android:layout_width="0dp"
				android:layout_height="54dp"
				android:layout_marginHorizontal="40dp"
				android:layout_marginTop="5dp"
				app:endIconMode="clear_text"
				app:hintEnabled="false"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_find_pw_id_label">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/common_id"
					android:inputType="text"
					android:maxLength="16"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/tv_error_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up_error_id"
				android:textColor="@color/negative"
				android:textSize="12sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@id/et_find_new_name"
				app:layout_constraintTop_toBottomOf="@id/et_find_pw_id" />

			<TextView
				android:id="@+id/tv_find_pw_mobile_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="20dp"
				android:text="@string/common_mobile_star"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_error_id" />


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/et_find_pw_mobile"
				android:layout_width="0dp"
				android:layout_height="54dp"
				android:layout_marginHorizontal="40dp"
				android:layout_marginTop="5dp"
				app:endIconMode="clear_text"
				app:hintEnabled="false"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_find_pw_mobile_label">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/common_mobile_no_hyphen"
					android:inputType="number"
					android:maxLength="11"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/tv_error_mobile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up_error_id"
				android:textColor="@color/negative"
				android:textSize="12sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@id/et_find_new_name"
				app:layout_constraintTop_toBottomOf="@id/et_find_pw_mobile" />

			<TextView
				android:id="@+id/tv_find_pw_auth_number_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="40dp"
				android:layout_marginTop="20dp"
				android:text="@string/common_auth_number_star"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_error_mobile" />

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/btn_find_pw_auth_number"
				style="@style/AppButtonPrimary.S14"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_margin="5dp"
				android:text="@string/common_auth_request"
				app:layout_constraintBottom_toBottomOf="@id/et_find_pw_mobile"
				app:layout_constraintEnd_toEndOf="@id/et_find_pw_mobile"
				app:layout_constraintTop_toTopOf="@id/et_find_pw_mobile" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/et_find_id_auth_number"
				android:layout_width="0dp"
				android:layout_height="54dp"
				android:layout_marginHorizontal="40dp"
				android:layout_marginTop="5dp"
				app:endIconMode="clear_text"
				app:hintEnabled="false"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_find_pw_auth_number_label">

				<com.google.android.material.textfield.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/common_auth_number"
					android:inputType="number"
					android:maxLength="6"
					android:textSize="14sp" />
			</com.google.android.material.textfield.TextInputLayout>

			<TextView
				android:id="@+id/tv_error_auth_number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up_error_auth_number"
				android:textColor="@color/negative"
				android:textSize="12sp"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@id/et_find_new_name"
				app:layout_constraintTop_toBottomOf="@id/et_find_id_auth_number" />

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/btn_find_pw_auth_confirm"
				style="@style/AppButtonPrimary.S14"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_margin="5dp"
				android:text="@string/common_auth_confirm"
				app:layout_constraintBottom_toBottomOf="@id/et_find_id_auth_number"
				app:layout_constraintEnd_toEndOf="@id/et_find_id_auth_number"
				app:layout_constraintTop_toTopOf="@id/et_find_id_auth_number" />


			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/btn_find_pw_done"
				style="@style/AppButtonPrimary.S16"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="40dp"
				android:layout_marginTop="50dp"
				android:layout_marginBottom="40dp"
				android:text="비밀번호 찾기"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/tv_error_auth_number" />


		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>